# haskino

./: .gitignore  Blink.hs  Changelog.md  Deep Version  HaskinoExprCmds.cpp  HaskinoRuntime.cpp  LICENSE  Protocol.blame  README.md  ScheduledBlink.hs  TODO.md  TwoButton.core  TwoButtonXform.hs  blink.ino  haskino.cabal  kansasAmber.cabal  lcd1.core  lcd3.core  myReadNewest.core  myTask1.c  stack.yaml  test-m.txt  test.c  xample.ino
Control/Remote/: Applicative.hs  Monad.hs  Packet.hs  Util.hs
Control/Remote/Applicative/: Types.hs
Control/Remote/Monad/: Packet.hs  Types.hs
Control/Remote/Monad/Packet/: Alternative.hs  Applicative.hs  Strong.hs  Transport.hs  Weak.hs
Control/Remote/Packet/: Alternative.hs  Applicative.hs  Query.hs  Strong.hs  Weak.hs
Data/Boolean/: Bits.hs
System/Hardware/: DeepArduino.hs  Haskino.hs  KansasAmber.hs
System/Hardware/DeepArduino/: Comm.hs  Data.hs  Protocol.hs  Utils.hs
System/Hardware/DeepArduino/Parts/: Eeprom.hs  LCD.hs  Piezo.hs  Servo.hs  SevenSegmentCodes.hs  ShiftRegisters.hs  Stepper.hs
System/Hardware/DeepArduino/SamplePrograms/: Analog.hs  Blink.hs  Button.hs  ButtonWait.hs  Counter.hs  Eeprom.hs  JingleBells.hs  LCD.hs  Morse.hs  NumGuess.hs  ScheduledBlink.hs  ScheduledLCD.hs  Servo.hs  SevenSegment.hs  Stepper.hs
System/Hardware/Haskino/: AbsLambdaPass.hs  BindChangeAppPass.hs  BindChangeArgPass.hs  BindChangePass.hs  BindChangeRetPass.hs  Comm.hs  CommProcPass.hs  Compiler.hs  Cond2Pass.hs  CondPass.hs  CondRetPass.hs  Data.hs  Decode.hs  Dictionary.hs  Expr.hs  LambdaPass.hs  Protocol.hs  RepLambdaPass.hs  ReturnsPass.hs  ShallowDeepPlugin.hs  Show.hs  TransNull.hs  Typechecker.hs  Utils.hs  bindChangeRet2Pass.hs
System/Hardware/Haskino/Parts/: LCD.hs  LCDE.hs  Piezo.hs  SevenSegmentCodes.hs  ShiftRegisters.hs
System/Hardware/Haskino/SamplePrograms/: Analog.hs  Blink.hs  BlinkE.hs  BlinkRefE.hs  BlinkRefIfBE.hs  BlinkRefIfE.hs  ButtonE.hs  ClearProg.hs  Eeprom.hs  EvalE.hs  Example.hs  ExampleE.hs  ExampleProg.hs  ForE.hs  JingleBells.hs  LCD.hs  LCDCounter.hs  LCDCounterE.hs  ListE.hs  Morse.hs  NumGuess.hs  NumGuessE.hs  ScheduledBlink.hs  ScheduledBlinkE.hs  ScheduledExampleE.hs  ScheduledLCD.hs  ScheduledLCDE.hs  SevenSegment.hs  TestE.hs  WhileBlinkE.hs
System/Hardware/Haskino/ShallowDeepPlugin/: AbsLambdaPass.hs  AbsThenPass.hs  ApRemovePass.hs  BindChangeAppPass.hs  BindChangeArgPass.hs  BindChangeRetPass.hs  CommProcPass.hs  CondPass.hs  CondRetPass.hs  CoreShow.hs  Dictionary.hs  MutRecurPass.hs  RecurPass.hs  RepAbsFusePass.hs  RepCasePushPass.hs  RepConstrPushPass.hs  RepPushPass.hs  ReturnsPass.hs  Typechecker.hs  Utils.hs  WhilePass.hs
System/Hardware/Haskino/Test/: ExprBool.hs  ExprFloat.hs  ExprInt.hs  ExprInt16.hs  ExprInt32.hs  ExprInt8.hs  ExprList8.hs  ExprWord16.hs  ExprWord32.hs  ExprWord8.hs  IfThenElseWord8.hs  WhileWord8.hs  forInTest.hs
System/Hardware/KansasAmber/: Comm.hs  Data.hs  Expr.hs  Protocol.hs  Utils.hs
firmware/AmberFirmware/: AmberAnalog.cpp  AmberAnalog.h  AmberBoardControl.cpp  AmberBoardControl.h  AmberBoardStatus.cpp  AmberBoardStatus.h  AmberBoards.cpp  AmberComm.cpp  AmberComm.h  AmberCommands.h  AmberControl.h  AmberDigital.cpp  AmberDigital.h  AmberFirmware.ino  AmberI2C.cpp  AmberI2C.h  AmberOneWire.cpp  AmberOneWire.h  AmberScheduler.cpp  AmberScheduler.h  AmberServo.cpp  AmberServo.h  AmberStepper.cpp  AmberStepper.h  Makefile
firmware/EEPROMErase/: EEPROMErase.ino  Makefile
firmware/HaskinoFirmware/: HaskinoAnalog.cpp  HaskinoAnalog.h  HaskinoBoardControl.cpp  HaskinoBoardControl.h  HaskinoBoardStatus.cpp  HaskinoBoardStatus.h  HaskinoCodeBlock.cpp  HaskinoCodeBlock.h  HaskinoComm.cpp  HaskinoComm.h  HaskinoCommands.h  HaskinoConfig.h  HaskinoDigital.cpp  HaskinoDigital.h  HaskinoExpr.cpp  HaskinoExpr.h  HaskinoExprCmds.cpp  HaskinoExprCmds.h  HaskinoFirmware.h  HaskinoFirmware.ino  HaskinoI2C.cpp  HaskinoI2C.h  HaskinoOneWire.cpp  HaskinoOneWire.h  HaskinoRefs.cpp  HaskinoRefs.h  HaskinoScheduler.cpp  HaskinoScheduler.h  HaskinoSerial.cpp  HaskinoServo.cpp  HaskinoServo.h  HaskinoStepper.cpp  HaskinoStepper.h  SoftReset.cpp  SoftReset.h
firmware/HaskinoFirmwareShallow/: HaskinoAnalog.cpp  HaskinoAnalog.h  HaskinoBoardControl.cpp  HaskinoBoardControl.h  HaskinoBoardStatus.cpp  HaskinoBoardStatus.h  HaskinoComm.cpp  HaskinoComm.h  HaskinoCommands.h  HaskinoConfig.h  HaskinoDigital.cpp  HaskinoDigital.h  HaskinoFirmware.ino  HaskinoI2C.cpp  HaskinoI2C.h  HaskinoSerial.cpp  HaskinoSerial.h  HaskinoServo.cpp  HaskinoServo.h  HaskinoStepper.cpp  HaskinoStepper.h
firmware/HaskinoRuntime/: HaskinoRuntime.cpp  HaskinoRuntime.h  HaskinoRuntimeDebug.cpp  HaskinoRuntimeDebug.h  HaskinoRuntimeDigital.cpp  HaskinoRuntimeDigital.h  HaskinoRuntimeExpr.cpp  HaskinoRuntimeExpr.h  HaskinoRuntimeI2C.cpp  HaskinoRuntimeI2C.h  HaskinoRuntimeList.h  HaskinoRuntimeMem.cpp  HaskinoRuntimeMem.h  HaskinoRuntimeRefs.cpp  HaskinoRuntimeRefs.h  HaskinoRuntimeScheduler.cpp  HaskinoRuntimeScheduler.h  HaskinoRuntimeSerial.cpp  HaskinoRuntimeSerial.h  HaskinoRuntimeServo.cpp  HaskinoRuntimeServo.h  HaskinoRuntimeStatus.cpp  HaskinoRuntimeStatus.h  HaskinoRuntimeStepper.cpp  HaskinoRuntimeStepper.h  firmware.ino
firmware/Timing/C/: HaskinoComm.cpp
firmware/Timing/Haskino/: HaskinoRuntimeExpr.cpp  firmware.ino
firmware/Timing/Host/: HostTiming.txt  Test.hs
firmware/Timing/Results/: TestMeasurements.txt
legacy/Deep/: BlinkE.hs  LCDCounterE.hs  MultiLED.hs  ScheduledLCDE.hs
legacy/Parts/: Eeprom.hs  LCD.hs  LCDE.hs  Piezo.hs  ShiftRegisters.hs
legacy/Parts/NotWorking/: Servo.hs  Stepper.hs
legacy/Rewrite/: Blink.hs  MultiLED.hs  SemExample.hs
legacy/Shallow/: Example.hs  JingleBells.hs  LCDCounter.hs
src/: ShallowDeepPlugin.hs  TestPlugin.hs
tests/ExprTests/: ExprFloat.hs  ExprInt16.hs  ExprList8.hs  ExprWord16.hs  ExprWord8.hs  IfThenElseWord8.hs  forInTest.hs
tests/TransTests/: RecurTest.hs  TransIfTest.hs  TransIfTestE.hs  TransMultiTest2.hs  TransRecurLetTestE.hs  TransRecurTest.hs  TransTestE.hs  TranslationTest.hs
tools/: GenEitherTypes.hs
(+127 files in other folders)
