Name:          KansasAmber
Version:       0.2
Category:      Hardware
Synopsis:      Control your Arduino board from Haskell using Deep Embedding
Description:   KansasAmber allows Haskell programs to control Arduino boards
               (<http://www.arduino.cc>) and peripherals, using the Firmata
               protocol (<http://firmata.org>).
               For details, see: <http://kufpg.github.com/KansasAmber>.
Copyright:     University of Kansas, 2015
License:       BSD3
License-file:  LICENSE
Stability:     Experimental
Author:        Mark Grebe
Homepage:      http://kufpg.github.com/KansasAmber
Bug-reports:   http://github.com/kufpg/KansasAmber/issues
Maintainer:    Mark Grebe
Build-Type:    Simple
Cabal-Version: >= 1.14
Extra-Source-Files: README.md, LICENSE

source-repository head
    type:       git
    location:   git://github.com/kufpg/KansasAmber.git

Library
  default-language  : Haskell2010
  ghc-options       : -Wall
  Build-depends     : base  >= 4 && < 5
                    , serialport >= 0.4.5
                    , bytestring
                    , mtl
                    , containers
                    , time
                    , base16-bytestring
  Exposed-modules   : System.Hardware.KansasAmber
                    , System.Hardware.KansasAmber.Parts.Eeprom
                    , System.Hardware.KansasAmber.Parts.LCD
                    , System.Hardware.KansasAmber.Parts.Piezo
                    , System.Hardware.KansasAmber.Parts.SevenSegmentCodes
                    , System.Hardware.KansasAmber.Parts.ShiftRegisters
                    , System.Hardware.KansasAmber.SamplePrograms.Analog
                    , System.Hardware.KansasAmber.SamplePrograms.Blink
                    , System.Hardware.KansasAmber.SamplePrograms.Eeprom
                    , System.Hardware.KansasAmber.SamplePrograms.JingleBells
                    , System.Hardware.KansasAmber.SamplePrograms.Morse
                    , System.Hardware.KansasAmber.SamplePrograms.LCD
                    , System.Hardware.KansasAmber.SamplePrograms.NumGuess
                    , System.Hardware.KansasAmber.SamplePrograms.ScheduledBlink
                    , System.Hardware.KansasAmber.SamplePrograms.SevenSegment
  Other-modules     : System.Hardware.KansasAmber.Comm
                    , System.Hardware.KansasAmber.Data
                    , System.Hardware.KansasAmber.Protocol
                    , System.Hardware.KansasAmber.Utils
